feat: member 파일 입출력 구현

--- a/UpAndDownGame/UpAndDownGame/UpAndDownGame.csproj
+++ b/UpAndDownGame/UpAndDownGame/UpAndDownGame.csproj
@@ -48,6 +48,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -75,11 +78,14 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>testDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="User\count.cs" />
-    <Compile Include="User\member.cs" />
+    <Compile Include="User\MemberService.cs" />
+    <Compile Include="User\MemberIO.cs" />
+    <Compile Include="User\Count.cs" />
+    <Compile Include="User\Member.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
