feat: 게임 포기 기능 추가 fix: 인터페이스 추가 (레벨, 판정, 유저) rename: 네임스페이스 정리

--- a/UpAndDownGame/UpAndDownGame/UpAndDownGame.csproj
+++ b/UpAndDownGame/UpAndDownGame/UpAndDownGame.csproj
@@ -61,10 +61,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomException\ExitGameException.cs" />
     <Compile Include="Game\Model\TargetValue.cs" />
     <Compile Include="Game\Enum\Judgement.cs" />
     <Compile Include="Core\Domain\GameLevelManager.cs" />
     <Compile Include="Core\Domain\JudgementManager.cs" />
+    <Compile Include="Interface\IMemberService.cs" />
+    <Compile Include="Interface\IJudgementManager.cs" />
+    <Compile Include="Interface\IGameLevelManager.cs" />
     <Compile Include="Service\GameService.cs" />
     <Compile Include="History\History.cs" />
     <Compile Include="Game\UpAndDown.cs" />
