fix: LevelManager 내부에서 목표값 관리하도록 수정 fix: 게임 초기화 부분 클래스 분리

--- a/UpAndDownGame/UpAndDownGame/UpAndDownGame.csproj
+++ b/UpAndDownGame/UpAndDownGame/UpAndDownGame.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomException\ExitGameException.cs" />
+    <Compile Include="Game\Initialize\GameInitializer.cs" />
     <Compile Include="Game\Model\TargetValue.cs" />
     <Compile Include="Game\Enum\Judgement.cs" />
     <Compile Include="Core\Domain\GameLevelManager.cs" />
